--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "plugins/artisan"]
-	path = plugins/artisan
-	url = git@github.com:jessarcher/zsh-artisan.git
+[submodule "themes/powerlevel10k"]
+	path = themes/powerlevel10k
+	url = git@github.com:romkatv/powerlevel10k.git
