➕ Add antidote and zsh-colored-man-pages

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "plugins/zsh-autosuggestions"]
 	path = plugins/zsh-autosuggestions
 	url = git@github.com:zsh-users/zsh-autosuggestions.git
+[submodule "plugins/zsh-colored-man-pages"]
+	path = plugins/zsh-colored-man-pages
+	url = git@github.com:ael-code/zsh-colored-man-pages.git
+[submodule "plugins/antidote"]
+	path = plugins/antidote
+	url = git@github.com:mattmc3/antidote.git
