🐛 Initialize starship in .zshrc

--- a/starship.toml
+++ b/starship.toml
@@ -16,6 +16,9 @@ format = "[$symbol$branch(:$remote_branch)]($style) "
 [python]
 format = "[${symbol}${pyenv_prefix}(${version} )]($style)"
 
+[cmd_duration]
+min_time = 10_000
+
 [package]
 disabled = true
 
