--- a/starship.toml
+++ b/starship.toml
@@ -7,7 +7,7 @@ error_symbol = "[➜](bold red)"
 
 [directory]
 truncation_length = 8
-truncate_to_repo = false
+truncate_to_repo = true
 repo_root_style = "bold green"
 
 [git_branch]
