--- a/starship.toml
+++ b/starship.toml
@@ -2,8 +2,8 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
 [character]
-success_symbol = "[➜](bold green)"
-error_symbol = "[➜](bold red)"
+success_symbol = '[➜](bold green)'
+error_symbol = '[➜](bold red)'
 
 [directory]
 truncation_length = 8
